# tcsam02

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  ModelAggregationCode.docx  README.md  tcsam02.tpl
RCode/: CompareModels.R  createResultsForR.R  loadModels.R  runMSE.TannerCrab.R  testJittering.R  testResizingBins.R
RCode/InputFiles.2018AM17/: Configuration.inp  Data.Bio.Info.inp  Data.Fishery.GTF.inp  Data.Fishery.RKF.inp  Data.Fishery.SCF.inp  Data.Fishery.TCF.inp  Data.Growth.EBS.inp  Data.Survey.NMFS.inp  Datasets.inp  Options.inp  ParametersInfo.inp  tcsam02.pin
RCode/InputFiles.EstModMode/: EstMod.Configuration.inp  EstMod.Options.inp  EstMod.ParametersInfo.inp
RCode/InputFiles.OpModMode/: OpMod.Configuration.inp  OpMod.Options.inp  OpMod.ParametersInfo.inp  OpModPinFile.pin
docs/scripts/: Makefile  TPLLayout.xml  doxyCFG_TCSAM02  make.sh  tcsam02MainPage.dox  tpl2dox.awk  tpl2dox.sh
include/: HarvestStrategies.hpp  MSEClasses.hpp  ModelConfiguration.hpp  ModelConstants.hpp  ModelData.hpp  ModelFunctions.hpp  ModelIndexBlocks.hpp  ModelIndexFunctions.hpp  ModelOptions.hpp  ModelParameterFunctions.hpp  ModelParameterInfoTypes.hpp  ModelParameterVectorInfoTypes.hpp  ModelParametersConfiguration.hpp  ModelParametersInfo.hpp  ModelPopDyClasses.hpp  ModelSelectivities.hpp  OFLCalcs.hpp  SummaryFunctions.hpp  TCSAM.hpp  gsm_splines.hpp
nbproject/: Makefile-Debug-MacOSX-ADMBv12.mk  Makefile-Debug.mk  Makefile-MacOSX-ADMBv12.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug-MacOSX-ADMBv12.bash  Package-Debug.bash  Package-MacOSX-ADMBv12.bash  Package-Release.bash  configurations.xml  project.xml
scripts/: zz_run_osx.sh  zz_run_win.bat
src/: CatchData.cpp  HarvestStrategies.cpp  IndivData.cpp  MSEClasses.cpp  ModelConfiguration.cpp  ModelConstants.cpp  ModelData.cpp  ModelFunctions.cpp  ModelIndexBlocks.cpp  ModelIndexFunctions.cpp  ModelOptions.cpp  ModelParameterFunctions.cpp  ModelParameterInfoTypes.cpp  ModelParameterInfoVectorTypes.cpp  ModelParametersInfo.cpp  ModelPopDyClasses.cpp  ModelSelectivities.cpp  OFLCalcs.cpp  SummaryFunctions.cpp
testing/: Data.BioInfo.2023.inp  Data.Fishery.2022.RKF.inp  Data.Fishery.2022.SCF.inp  Data.Fishery.2023.GF_All.inp  Data.Fishery.2023.TCF.inp  Data.Growth2000.EBS.inp  Data.Survey.2017.SBS_BSFRF_F.inp  Data.Survey.2017.SBS_BSFRF_M.inp  Data.Survey.2017.SBS_NMFS_F.inp  Data.Survey.2017.SBS_NMFS_M.inp  Data.Survey.2023.NMFS.MaleMaturityOgives.inp  Data.Survey.2023.NMFS_F.inp  Data.Survey.2023.NMFS_M.inp  Datasets.2023.inp  MCI.inp  MOs.2023.22_03b.inp  tcsam02.pin
